Added the creation of a super augmented dataset and ConvNeXt model
CreateTheBestDataset.ipynb contains the instruction to statically augment the balanced_dataset, whereas ConvNeXt_LastDataset.ipynb contains the trained model.

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@ Challenge 1/Preprocessing/balanced_dataset.npz
 Challenge 1/Preprocessing/CreateRandAugmentValidation.ipynb
 *.keras
 *zip
+Challenge 1/Preprocessing/SplitTrainingValidation.ipynb
+Challenge 1/Preprocessing/cutmix_mixup.ipynb
